fixed dev card body spacing, added title to dev section

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
 }
 .dev-profile{
-    height: 55%;
+    height: 60%;
     border-radius: 30px 30px 0 0;
     overflow: hidden;
     border-bottom: solid #170309 4px;
